--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "babel-loader": "^8.0.6",
+    "raw-loader": "^4.0.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
