--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "oct-webgl",
   "version": "1.0.0",
-  "description": "",
+  "description": "oct-webgl",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server"
@@ -14,10 +15,11 @@
     "babel-loader": "^8.0.6",
     "raw-loader": "^4.0.0",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1",
+    "html-webpack-plugin": "^3.2.0"
   },
   "dependencies": {
-    "html-webpack-plugin": "^3.2.0",
-    "webpack-dev-server": "^3.10.1"
+    "gl-util": "^3.1.2"
   }
 }
